# bl4

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EDITOR.md  PLAN-100-percent-decoding.md  README.md  clippy.toml  install_test_save.sh  mkdocs.yml
crates/bl4-cli/: Cargo.toml
crates/bl4-cli/src/: file_io.rs  inject.rs  main.rs  memory.rs
crates/bl4-cli/src/memory/: legacy.rs  mod.rs
crates/bl4-gui/: Cargo.toml
crates/bl4-gui/src/: app.rs  main.rs  ui.rs
crates/bl4-gui/src/ui/: backup_manager.rs  bank.rs  character.rs  cosmetics.rs  currency.rs  file_manager.rs  inventory.rs  item_decoder.rs  locations.rs  missions.rs  settings.rs
crates/bl4-research/: Cargo.toml
crates/bl4-research/src/: main.rs  manifest.rs
src/bl4/: Cargo.toml  LICENSE  build-wasm.sh  build.rs  package.json
src/bl4-cli/: Cargo.toml
src/bl4-cli/src/: config.rs  dispatch.rs  file_io.rs  file_utils.rs  main.rs  manifest.rs
src/bl4-cli/src/cli/: core.rs  drops.rs  idb.rs  memory.rs  mod.rs  ncs.rs  research.rs  save.rs  serial.rs
src/bl4-cli/src/commands/: campaign.rs  configure.rs  drops.rs  launch.rs  manifest.rs  mod.rs  ncs.rs  parts.rs  save.rs  serial.rs  usmap.rs
src/bl4-cli/src/commands/extract/: manifest_extract.rs  minidump.rs  mod.rs  ncs.rs  orchestrator.rs  part_pools.rs
src/bl4-cli/src/commands/items_db/: attachments.rs  crud.rs  decode.rs  helpers.rs  metadata.rs  mod.rs  network.rs
src/bl4-cli/src/commands/memory/: analysis.rs  build_parts_db.rs  discover.rs  extract_ncs_schema.rs  extract_parts.rs  fname.rs  listing.rs  mod.rs  objects.rs  preload.rs  raw_memory.rs
src/bl4-cli/src/commands/ncs/: debug.rs  decompress.rs  extract.rs  format.rs  mod.rs  scan.rs  search.rs  show.rs  types.rs
src/bl4-cli/src/manifest/: file_extraction.rs  items_database.rs  mod.rs  pak_extraction.rs  pak_manifest.rs  property_parsing.rs  reference_data.rs  uasset_extraction.rs
src/bl4-cli/src/manifest/file_extraction/: balance.rs  gear.rs  manufacturers.rs  mod.rs  types.rs
src/bl4-cli/src/manifest/pak_extraction/: attributes.rs  manufacturers.rs  mod.rs  weapon_gear.rs
src/bl4-cli/src/memory/: binary.rs  constants.rs  discovery.rs  fname.rs  legacy.rs  mod.rs  parts.rs  pattern.rs  reflection.rs  ue5.rs  usmap.rs  walker.rs
src/bl4-cli/src/memory/discovery/: class_uclass.rs  gnames.rs  guobject.rs  mod.rs
src/bl4-cli/src/memory/fname/: mod.rs  pool.rs  reader.rs
src/bl4-cli/src/memory/legacy/: mod.rs  object_search.rs  part_defs.rs  part_extraction.rs
src/bl4-cli/src/memory/reflection/: mod.rs  types.rs  uclass.rs
src/bl4-cli/src/memory/source/: dump.rs  mock.rs  mod.rs  process.rs  region.rs  traits.rs
src/bl4-cli/src/memory/usmap/: extraction.rs  format.rs  mod.rs  name_table.rs  serializer.rs  writer.rs
src/bl4-cli/src/memory/walker/: analyze.rs  mod.rs  (+5 more)
src/bl4-community/: Cargo.toml  Dockerfile
src/bl4-community/src/: db.rs  helpers.rs  lib.rs  main.rs  rate_limit.rs  routes.rs  schema.rs  state.rs
src/bl4-community/src/handlers/: attachments.rs  bulk.rs  items.rs  mod.rs  serial.rs  system.rs
src/bl4-community/tests/: handlers.rs
src/bl4-idb/: Cargo.toml
src/bl4-idb/src/: lib.rs  repository.rs  shared.rs  sqlite.rs  sqlx_impl.rs  types.rs
src/bl4-ncs/: Cargo.toml  build.rs
src/bl4-ncs/examples/: check_markers.rs  debug_binary_parser.rs  dump_data_table.rs  examine_gap.rs  examine_header_categories.rs  examine_inv_binary.rs  examine_pre_binary.rs  find_deps_in_strings.rs  find_deps_location.rs  find_tags.rs  parse_deps_from_binary.rs  scan_with_tags.rs  search_for_deps.rs  test_ncs_parser.rs  test_tag_alignment.rs  test_with_known_deps.rs  validate_serial_extraction.rs
src/bl4-ncs/src/: binary_parser.rs  binary_parser_v2.rs  bit_reader.rs  content.rs  data.rs  document.rs  drops.rs  extract.rs  field.rs  hash.rs  header.rs  inventory.rs  item_names.rs  legacy.rs  lib.rs  manifest.rs  mission_names.rs  name_data.rs  ncs_parser.rs  oodle.rs  pak.rs  parser.rs  skill_trees.rs  string_table.rs  tag_value_parser.rs  tooltips.rs  types.rs  unpack.rs
src/bl4-ncs/src/data_table/: extract.rs  mod.rs  types.rs
src/bl4-ncs/src/drops/: db.rs  extract.rs  mod.rs  types.rs
src/bl4-ncs/src/parse/: blob.rs  decode.rs  mod.rs  remap.rs  typecodes.rs
src/bl4-ncs/src/parser/: binary.rs  differential.rs  document.rs  entries.rs  header.rs  mod.rs  unpack.rs
src/bl4-ncs/tests/: count_all_strings.rs  test_binary_offset.rs
src/bl4-research/: Cargo.toml
src/bl4-research/src/: items.rs  main.rs  manifest.rs
src/bl4-save-editor/: Cargo.toml  build.rs  tauri.conf.json
src/bl4-save-editor/capabilities/: default.json
src/bl4-save-editor/icons/: icon.icns
src/bl4-save-editor/src/: commands.rs  lib.rs  main.rs  menu.rs  resources.rs  server.rs  servo_webview.rs  state.rs  tauri_commands.rs  webview.rs
src/bl4-save-editor/ui/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
src/bl4-save-editor/ui/src/: App.tsx  bl4.ts  contexts.ts  editor-store.test.ts  editor-store.ts  global.css.ts  main.ts  pug.d.ts  router.ts  saves.ts  style.css  test-utils.ts  theme.css.ts
src/bl4/examples/: extract_strings.rs  inject_items.rs  varint_analysis.rs
src/bl4/src/: backup.rs  firmware.rs  items.rs  lib.rs  manifest.rs  missions.rs  parts.rs  reference.rs  save.rs  serial.rs  skills.rs  wasm.rs
src/bl4/src/reference/: element.rs  manufacturer.rs  rarity.rs  stats.rs  weapon.rs
src/bl4/src/save/: campaign.rs  changeset.rs  entitlements.rs  fod.rs  mod.rs  session.rs
src/bl4/src/serial/: base85.rs  bitstream.rs  mod.rs  rarity.rs  resolve.rs  validate.rs
src/linewise/: Cargo.toml
src/linewise/src/: interactive.rs  main.rs
src/uextract/: Cargo.toml
src/uextract/examples/: dump_exports.rs  test_gbx_scan.rs
src/uextract/src/: cli.rs  gbx.rs  lib.rs  main.rs  pak.rs  property.rs  scanner.rs  texture.rs  zen.rs
src/uextract/src/commands/: mod.rs  pak.rs  texture.rs
tools/ncs-extract/: Cargo.toml  build.rs  ooz_wrapper.cpp
tools/ncs-extract/src/: main.rs
(+633 files in other folders)
