[workspace]
resolver = "2"
members = [
    "crates/bl4",
    "crates/bl4-cli",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["OnTheBorder Contributors"]
license = "BSD-2-Clause"
repository = "https://github.com/monokrome/OnTheBorder"

[workspace.dependencies]
# Crypto
aes = "0.8"

# Compression
flate2 = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
hex = "0.4"
sha2 = "0.10"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
