[workspace]
resolver = "2"
members = [
    "src/bl4",
    "src/bl4-idb",
    "src/bl4-ncs",
    "src/bl4-cli",
    "src/bl4-community",
    "src/bl4-save-editor",
    "src/uextract",
    "src/linewise",
    "tools/bl4-preload",
]

[workspace.package]
version = "0.5.19"
edition = "2021"
authors = ["bl4 Contributors"]
license = "BSD-2-Clause"
repository = "https://github.com/monokrome/bl4"

[workspace.dependencies]
# Crypto
aes = "0.8"

# Compression
flate2 = "1.0"
adler = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
hex = "0.4"
sha2 = "0.10"
rusqlite = { version = "0.37", features = ["bundled"] }

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[workspace.lints.clippy]
# Complexity lints (thresholds set in clippy.toml)
cognitive_complexity = "warn"
too_many_lines = "warn"
too_many_arguments = "warn"

# Additional quality lints
fn_params_excessive_bools = "warn"
struct_excessive_bools = "warn"
