[package]
name = "bl4-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bl4 = { path = "../bl4" }

# GUI
eframe = "0.30"
egui = "0.30"
egui_extras = { version = "0.30", features = ["image"] }
rfd = "0.15" # Native file dialogs

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_yaml.workspace = true

# Compression/Encoding
flate2.workspace = true
base64 = "0.22"

[[bin]]
name = "bl4-gui"
path = "src/main.rs"
