[package]
name = "bl4-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tool for Borderlands 4 save editing"

[[bin]]
name = "bl4"
path = "src/main.rs"

[features]
default = []
research = ["dep:regex", "dep:unreal_asset", "dep:chrono", "dep:minidump"]

[dependencies]
bl4 = { version = "0.5", path = "../bl4" }
bl4-idb = { version = "0.5", path = "../bl4-idb", features = ["sqlite-sync", "attachments"] }
bl4-ncs = { version = "0.5", path = "../bl4-ncs" }
uextract = { version = "0.1", path = "../uextract" }
rusqlite = { workspace = true }  # For direct database operations (merge)
clap.workspace = true
anyhow.workspace = true
serde_yaml.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml = "0.8"
dirs = "5.0"
walkdir = "2.4"

# For process injection/memory access
process-memory = "0.5"
sysinfo = "0.35"
byteorder = "1.5"
memmap2 = "0.9"
memchr = "2.7"

# HTTP client for publishing
ureq = { version = "2.10", features = ["json"] }
urlencoding = "2.1"

# Research feature dependencies (manifest generation)
regex = { version = "1.10", optional = true }
unreal_asset = { version = "0.1", optional = true }
chrono = { version = "0.4", optional = true }
minidump = { version = "0.26", optional = true }

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
