[package]
name = "bl4-idb"
version.workspace = true
edition.workspace = true
description = "Items database library for Borderlands 4 save editor"

[features]
default = ["sqlite-sync"]
sqlite-sync = ["rusqlite", "anyhow"]
sqlx-sqlite = ["sqlx/sqlite", "tokio"]
sqlx-postgres = ["sqlx/postgres", "tokio"]
# Enable screenshot/image attachment storage
attachments = []

[dependencies]
# Serialization
serde.workspace = true
serde_json = "1.0"

# Error handling
thiserror.workspace = true
anyhow = { workspace = true, optional = true }

# Sync SQLite (CLI)
rusqlite = { workspace = true, optional = true }

# Async SQLx (server)
sqlx = { version = "0.8", features = ["runtime-tokio", "macros"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
