[package]
name = "bl4-idb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Items database library for Borderlands 4 save editor"

[features]
default = ["sqlite-sync"]
sqlite-sync = ["rusqlite", "anyhow"]
sqlx-sqlite = ["sqlx/sqlite", "tokio", "chrono"]
sqlx-postgres = ["sqlx/postgres", "tokio", "chrono"]
# Enable screenshot/image attachment storage
attachments = []

[dependencies]
# Serialization
serde.workspace = true
serde_json = "1.0"

# Error handling
thiserror.workspace = true
anyhow = { workspace = true, optional = true }

# Sync SQLite (CLI)
rusqlite = { workspace = true, optional = true }

# Async SQLx (server) - 0.9 alpha for libsqlite3-sys compatibility with Servo
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "macros", "chrono"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
chrono = { version = "0.4", optional = true }

# Hashing and UUIDs for source anonymization
sha2 = "0.10"
uuid = { version = "1.11", features = ["v4", "v5"] }
hex = "0.4"
rand = "0.8"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }

[lints]
workspace = true
