[package]
name = "bl4-research"
version.workspace = true
edition.workspace = true
description = "DEPRECATED: Research tools for BL4 reverse engineering. Use `bl4 idb` for items DB. Other commands will move to uextract."

[[bin]]
name = "bl4-research"
path = "src/main.rs"

[dependencies]
# Asset parsing
unreal_asset = "0.1"

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = { workspace = true }

# Regex for string parsing
regex = "1.10"

# Walkdir for recursive directory traversal
walkdir = "2.4"

# Time handling
chrono = "0.4"

# SQLite database
rusqlite = { version = "0.32", features = ["bundled"] }

# BL4 serial decoding
bl4 = { path = "../bl4" }
