[package]
name = "bl4-save-editor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GUI save editor for Borderlands 4"

[[bin]]
name = "bl4se"
path = "src/main.rs"

[features]
default = []
server = ["axum", "tower-http", "tokio", "tokio-stream", "dirs", "notify"]
servo = ["winit", "libservo", "embedder_traits", "euclid", "url", "urlencoding", "tracing", "rustls"]

[dependencies]
bl4 = { path = "../bl4" }
bl4-idb = { path = "../bl4-idb", features = ["sqlite-sync"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

# Server (Axum)
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors", "fs"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
dirs = { version = "6", optional = true }
notify = { version = "8", optional = true }

# Servo (GTK-free native)
winit = { version = "0.30", optional = true }
libservo = { git = "https://github.com/servo/servo", rev = "55c4f579c9235dd7860302eb828beaf4c459e569", optional = true }
embedder_traits = { git = "https://github.com/servo/servo", rev = "55c4f579c9235dd7860302eb828beaf4c459e569", optional = true }
euclid = { version = "0.22", optional = true }
url = { version = "2.5", optional = true }
urlencoding = { version = "2.1", optional = true }
tracing = { version = "0.1", optional = true }
rustls = { version = "0.23", optional = true }

# Native menus - macOS only (Linux/Windows use in-webview menus)
[target.'cfg(target_os = "macos")'.dependencies]
muda = { version = "0.16", optional = true }

[lints]
workspace = true
