[package]
name = "bl4-save-editor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GUI save editor for Borderlands 4"

[[bin]]
name = "bl4se"
path = "src/main.rs"

[features]
default = []
server = ["axum", "tower-http", "tokio", "tokio-stream", "dirs", "notify"]
tauri = ["dep:tauri", "dep:tauri-plugin-dialog", "dep:tauri-build"]

[dependencies]
bl4 = { path = "../bl4" }
bl4-idb = { path = "../bl4-idb", features = ["sqlite-sync"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

# Server (Axum)
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors", "fs"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
dirs = { version = "6", optional = true }
notify = { version = "8", optional = true }

# Tauri
tauri = { version = "2", features = ["wry"], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }

[build-dependencies]
tauri-build = { version = "2", optional = true , features = [] }

[lints]
workspace = true
