[package]
name = "bl4-save-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri-based GUI save editor for Borderlands 4"

[[bin]]
name = "bl4se"
path = "src/main.rs"

[lib]
name = "app_lib"
path = "src/lib.rs"

[dependencies]
bl4 = { path = "../bl4" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lints]
workspace = true
