[package]
name = "bl4"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Borderlands 4 save editor library - encryption, decryption, and parsing"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["db"]
wasm = ["wasm-bindgen", "js-sys"]
db = ["rusqlite", "anyhow"]

[dependencies]
aes.workspace = true
flate2.workspace = true
adler.workspace = true
serde = { workspace = true }
serde_yaml.workspace = true
serde_json = "1.0"
thiserror.workspace = true
hex.workspace = true
sha2.workspace = true
phf = { version = "0.11", features = ["macros"] }

# Database (optional)
rusqlite = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

# WASM dependencies (optional)
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
tempfile = "3.8"
