[package]
name = "bl4"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Borderlands 4 save editor library - encryption, decryption, and parsing"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
aes.workspace = true
flate2.workspace = true
adler.workspace = true
serde = { workspace = true }
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
sha2.workspace = true
once_cell = "1.19"
phf = { version = "0.11", features = ["macros"] }

# WASM dependencies (optional)
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
tempfile = "3.8"

[lints]
workspace = true
