[package]
name = "linewise"
version = "0.1.0"
edition = "2021"
description = "Pattern analysis tool for record-oriented binary data"

[[bin]]
name = "linewise"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
prefer = "0.3"
prefer_derive = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
rand = "0.8"

[lints]
workspace = true
