[package]
name = "ncs-extract"
version = "0.1.0"
edition = "2021"
description = "Extractor for Gearbox NCS (Nexus Compiled Script) files"

[workspace]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
# Compression libraries to test
flate2 = "1.0"          # zlib/deflate
lz4_flex = "0.11"       # lz4
zstd = "0.13"           # zstd
xz2 = "0.1"             # lzma/xz
byteorder = "1.5"       # For reading binary data
hex = "0.4"             # For hex output

[build-dependencies]
cc = "1.0"

[features]
default = []
